--- a/Blog.html
+++ b/Blog.html
@@ -30,21 +30,21 @@
             <div id="slider">
                 <a class="slide" href="Materias/materia1.html" id="S1">
                     <div id="texto">
-                        <h2>Nome da Matéria1</h2>
+                        <h2>O que é educação financeira?</h2>
                         <p class="tema">tema</p>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </a>
                 <a class="slide" href="Materias/materia2.html" id="S2">
                     <div id="texto">
-                        <h2>Nome da Matéria2</h2>
+                        <h2>O que é investimentos?</h2>
                         <p class="tema">tema</p>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                     </div>
                 </a>
                 <a class="slide" href="Materias/materia3.html" id="S3">
                     <div id="texto">
-                        <h2>Nome da Matéria3</h2>
+                        <h2>Tipos de investimentos</h2>
                         <p class="tema">tema</p>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                     </div>
@@ -67,48 +67,48 @@
             <div id="ComAside">
                 <article>
                     <a href="Materias/materia4.html">
-                        <img src="" alt="">
+                        <div class="imgMateria" id="M4"></div>
                         <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
+                        <h4>Poupança</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
                     <a href="Materias/materia5.html">
-                        <img src="" alt="">
+                        <div class="imgMateria" id="M5"></div>
                         <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
+                        <h4>O que é liquidez?</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
                     <aside>
                         <p>e</p>
                     </aside>
                     <a href="Materias/Materia6.html">
-                        <img src="" alt="">
+                        <div class="imgMateria" id="M6"></div>
                         <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
+                        <h4>Bolsa de Valores</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
                     <aside id="asideMobile">
                         <p>e</p>
                     </aside>
                     <a href="Materias/Materia7.html">
-                        <img src="" alt="">
+                        <div class="imgMateria" id="M7"></div>
                         <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
+                        <h4>Juros e inflação</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
                     <aside>
                         <p>e</p>
                     </aside>
                     <a href="Materias/Materia8.html">
-                        <img src="" alt="">
+                        <div class="imgMateria" id="M8"></div>
                         <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
+                        <h4>Crédito</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
                     <a href="Materias/Materia9.html">
-                        <img src="" alt="">
+                        <div class="imgMateria" id="M9"></div>
                         <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
+                        <h4>Endividamento</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
                     <aside>
