--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="IMG/Logos/Icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/Responsividade.css">
+    <link rel="stylesheet" href="CSS/Resposividade/Responsividade.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
     <title>Educação Financeira</title>
 </head>
@@ -26,9 +26,30 @@
     </nav>
     <main>
         <header>
-            <h1>Bem vindo ao Educação Financeira<br>Seu blog de finanças para adolescentes</h1>
-            <img src="IMG/LogoComFundo.PNG" alt="LogoDoBlog" id="LogoG">
+            <h1>Bem vindo ao <strong>MONETIZE-SE</strong><br>Seu guia na educação finaceira para adolescentes</h1>
         </header>
+        <section id="QuemSomosP">
+            <h1>O que o é a MONETIZE-SE</h1>
+            <p>Breve descrição</p>
+            <ul>
+                <li><strong>Oferecemos</strong> ao público jovem o aprendizado abrangente sobre educação financeira</li>
+                <li><strong>Queremos</strong> apresentar o reconhecimento dos impactos futuros desse conhecimento na qualidade de vida</li>
+                <li></li>
+                <li></li>
+            </ul>
+            <h2>Nossa proposta</h2>
+            <p> A proposta da Monetiza-se é trazer conhecimentos de finanças para um público jovem de maneira lúdica. Que visa mostrar a importância do uso correto do dinheiro e a melhor maneira de administrar ele, para uma melhor qualidade de vida.</p>
+        </section>
+        <section id="ServicosP">
+            <h1>Nosso Serviços</h1>
+            <p></p>
+            <ul>
+                <li>nosso <a href="">blog</a> com matérias informativas</li>
+                <li>materiais didáticos</li>
+                <li>aulas</li>
+                <li>e palestras para redes de ensino</li>
+            </ul>
+        </section>
         <section id="Newsletter">
             <div>
                 <h1>Assine nossa <span>Newsletter</span></h1>
