--- a/Materias/materia1.html
+++ b/Materias/materia1.html
@@ -44,8 +44,14 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materia4.html">
-                        <img src="" alt="">
+                    <a href="Materias/materia4.html">
+                        <div class="imgMateria" id="M4"></div>
+                        <p class="temaM">Tema</p>
+                        <h4>titulo</h4>
+                        <p>categoria categoria categoria categoria</p>
+                    </a>
+                    <a href="Materias/materia5.html">
+                        <div class="imgMateria" id="M5"></div>
                         <p class="temaM">Tema</p>
                         <h4>titulo</h4>
                         <p>categoria categoria categoria categoria</p>
@@ -53,14 +59,8 @@
                     <aside>
                         <p>e</p>
                     </aside>
-                    <a href="Materia5.html">
-                        <img src="" alt="">
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
-                    </a>
-                    <a href="Materia6.html">
-                        <img src="" alt="">
+                    <a href="Materias/Materia6.html">
+                        <div class="imgMateria" id="M6"></div>
                         <p class="temaM">Tema</p>
                         <h4>titulo</h4>
                         <p>categoria categoria categoria categoria</p>
