--- a/QuemSomos.html
+++ b/QuemSomos.html
@@ -25,6 +25,12 @@
         </ul>
     </nav>
     <main>
+        <section id="QuemSomos">
+
+        </section>
+        <section id="MVV">
+
+        </section>
         <section id="Newsletter">
             <div>
                 <h1>Assine nossa <span>Newsletter</span></h1>
