--- a/Materias/materia2.html
+++ b/Materias/materia2.html
@@ -7,9 +7,7 @@
     <link rel="shortcut icon" href="IMG/Logos/Icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/materias.css">
     <link rel="stylesheet" href="../CSS/Resposividade/MateriaR.css">
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
-        async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
     <title>Educação Financeira - O que é investimentos?</title>
 </head>
 
@@ -31,7 +29,7 @@
             <h1>O que é investimentos?</h1>
             <h3>Tema</h3>
             <figure id="imgG">
-                <img src="../IMG/Materia1.jpg" alt="LogoDoBlog">
+                <img src="../IMG/Materia2.jpg" alt="LogoDoBlog">
             </figure>
         </header>
         <section id="TextoMateria">
