--- a/Blog.html
+++ b/Blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="IMG/Logos/Icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/blog.css">
     <link rel="stylesheet" href="CSS/Resposividade/BlogR.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
@@ -19,7 +19,7 @@
         </div>
         <ul>
             <li><a href="index.html">Principal</a></li>
-            <li><a href="Blog.html">Blog</a></li>
+            <li><a href="Blog.html" id="Ativado" >Blog</a></li>
             <li><a href="QuemSomos.html">Quem Somos</a></li>
             <li><a href="Servicos.html">Serviços</a></li>
         </ul>
@@ -32,21 +32,21 @@
                     <div id="texto">
                         <h2>O que é educação financeira?</h2>
                         <p class="tema">tema</p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>A educação financeira abrange todos os conhecimentos sobre finanças e está relacionada diretamente ao mercado econômico atual.</p>
                     </div>
                 </a>
                 <a class="slide" href="Materias/materia2.html" id="S2">
                     <div id="texto">
                         <h2>O que é investimentos?</h2>
                         <p class="tema">tema</p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <p>É a ação de aplicar o seu dinheiro visando receber lucros no futuro. O investimento faz parte do planejamento financeiro e deve buscar atender os seus objetivos.</p>
                     </div>
                 </a>
                 <a class="slide" href="Materias/materia3.html" id="S3">
                     <div id="texto">
                         <h2>Tipos de investimentos</h2>
                         <p class="tema">tema</p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <p></p>
                     </div>
                 </a>
             </div>
@@ -63,53 +63,81 @@
             </article>
         </section>
         <section id="Materias">
-            <h3>Principais Materias</h3>
+            <h3>Matérias</h3>
             <div id="ComAside">
                 <article>
                     <a href="Materias/materia4.html">
                         <div class="imgMateria" id="M4"></div>
                         <p class="temaM">Tema</p>
                         <h4>Poupança</h4>
-                        <p>categoria categoria categoria categoria</p>
+                        <p>Poupar é uma forma tradicional de investir e não envolve riscos. A finalidade da poupança é guardar recursos fixos para usar em um determinado fim.</p>
                     </a>
                     <a href="Materias/materia5.html">
                         <div class="imgMateria" id="M5"></div>
                         <p class="temaM">Tema</p>
                         <h4>O que é liquidez?</h4>
-                        <p>categoria categoria categoria categoria</p>
+                        <p>A liquidez é a capacidade que um bem ou investimento tem de ser transformado em dinheiro em mãos</p>
                     </a>
                     <aside>
                         <p>e</p>
                     </aside>
-                    <a href="Materias/Materia6.html">
+                    <a href="Materias/materia6.html">
                         <div class="imgMateria" id="M6"></div>
                         <p class="temaM">Tema</p>
                         <h4>Bolsa de Valores</h4>
-                        <p>categoria categoria categoria categoria</p>
+                        <p>A bolsa de valores é um ambiente digital onde ocorrem a negociação de ações, títulos e outros ativos. </p>
                     </a>
                     <aside id="asideMobile">
                         <p>e</p>
                     </aside>
-                    <a href="Materias/Materia7.html">
+                    <a href="Materias/materia7.html">
                         <div class="imgMateria" id="M7"></div>
                         <p class="temaM">Tema</p>
                         <h4>Juros e inflação</h4>
-                        <p>categoria categoria categoria categoria</p>
+                        <p>Juros é a porcentagem que é cobrada a partir do empréstimo do dinheiro, e a inflação são os aumentos nos valores de bem que ocorrem em alguns períodos. </p>
                     </a>
                     <aside>
                         <p>e</p>
                     </aside>
-                    <a href="Materias/Materia8.html">
+                    <aside>
+                        <p>e</p>
+                    </aside>
+                    <a href="Materias/materia1.html">
                         <div class="imgMateria" id="M8"></div>
                         <p class="temaM">Tema</p>
                         <h4>Crédito</h4>
-                        <p>categoria categoria categoria categoria</p>
+                        <p>Crédito é uma forma de compra rápida oferecida por bancos centrais que não precisa necessariamente do dinheiro na hora.</p>
                     </a>
-                    <a href="Materias/Materia9.html">
+                    <aside>
+                        <p>e</p>
+                    </aside>
+                    <a href="Materias/materia9.html">
                         <div class="imgMateria" id="M9"></div>
                         <p class="temaM">Tema</p>
                         <h4>Endividamento</h4>
-                        <p>categoria categoria categoria categoria</p>
+                        <p>O endividamento acontece quando você não consegue arcar com os gastos e acaba adiando o pagamento. </p>
+                    </a>
+                    
+                    <a href="Materias/materia1.html">
+                        <div class="imgMateria" id="M1"></div>
+                        <p class="temaM">Tema</p>
+                        <h4>O que é educação financeira?</h4>
+                        <p>A educação financeira abrange todos os conhecimentos sobre finanças e está relacionada diretamente ao mercado econômico atual.</p>
+                    </a>
+                    <aside>
+                        <p>e</p>
+                    </aside>
+                    <a href="Materias/materia2.html">
+                        <div class="imgMateria" id="M2"></div>
+                        <p class="temaM">Tema</p>
+                        <h4>O que é investimentos?</h4>
+                        <p>É a ação de aplicar o seu dinheiro visando receber lucros no futuro. O investimento faz parte do planejamento financeiro e deve buscar atender os seus objetivos.</p>
+                    </a>
+                    <a href="Materias/materia3.html">
+                        <div class="imgMateria" id="M3"></div>
+                        <p class="temaM">Tema</p>
+                        <h4>Tipos de investimentos</h4>
+                        <p>p</p>
                     </a>
                     <aside>
                         <p>e</p>
