--- a/Padrao.html
+++ b/Padrao.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="IMG/Logos/Icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/padrão.css">
-    <link rel="stylesheet" href="CSS/Responsividade.css">
+    <link rel="stylesheet" href="CSS/Resposividade/responsividade.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
     <title>Educação Financeira</title>
 </head>
