--- a/QuemSomos.html
+++ b/QuemSomos.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="IMG/Logos/Icon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="CSS/padrão.css">
-    <link rel="stylesheet" href="CSS/Responsividade.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
+    <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
+    <link rel="stylesheet" href="CSS/quemSomos.css">
+    <link rel="stylesheet" href="CSS/Resposividade/quemSomosR.css">
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
+        async defer></script>
     <title>Educação Financeira - Quem Somos</title>
 </head>
 
@@ -20,16 +22,32 @@
         <ul>
             <li><a href="index.html">Principal</a></li>
             <li><a href="Blog.html">Blog</a></li>
-            <li><a href="QuemSomos.html">Quem Somos</a></li>
+            <li><a href="QuemSomos.html" id="Ativado">Quem Somos</a></li>
             <li><a href="Servicos.html">Serviços</a></li>
         </ul>
     </nav>
     <main>
         <section id="QuemSomos">
-
+            <h1>Quem Somos</h1>
+            <p>Nossa empresa é nova e apresenta um grande diferencial no mercado, um serviço personalizado para o nosso público e a valorização de cada um individualmente, criando uma experiência única e lúdica para o público. Visamos transformar a sua vida pessoal, profissional e finanças satisfatória. A empresa aposta em inovação para atingir o objetivo de propagar o conhecimento sobre educação financeira e mudar a realidade das pessoas com a aplicação do tema no seu cotidiano.</p>
         </section>
         <section id="MVV">
-
+            <h1>Missão, Visão e Valores</h1>
+            <article>
+                <img src="IMG/missao.png" alt="missao">
+                <h2>Missão</h2>
+                <p> Capacitar adolescente do ensino médio com habilidades e conhecimentos necessários para gerenciar suas finanças pessoais ao tomar decisões financeiras, gerando uma formação responsável e eficaz.</p>
+            </article>
+            <article>
+                <img src="IMG/visao.png" alt="visao">
+                <h2>Visão</h2>
+                <p>Ser uma referência no âmbito da educação financeira para adolescente, de forma que os mesmo tenham ciência da importância deste conhecimento para gerenciar um futuro com mais qualidade de vida e estabilidade</p>
+            </article>
+            <article>
+                <img src="IMG/valores.png" alt="valores">
+                <h2>Valores</h2>
+                <p>Somos uma empresa comprometida em transforma a realidade do nosso público, atuar com transparência, comprometimento e eficácia gerando um aprendizado contínuo e de alta qualidade.</p>
+            </article>
         </section>
         <section id="Newsletter">
             <div>
@@ -51,14 +69,20 @@
             <div id="map"></div>
             <div id="Contatos">
                 <h3>Contato</h3>
-                <img src="IMG/Icons/Predio.png" alt="IconPredio"><p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
-                <img src="IMG/Icons/Telefone.png" alt="IconTel"><p>(11)4823-7765</p><br>
-                <img src="IMG/Icons/whatsapp.png" alt="IconWhats"><p>(11) 98756-4456</p><br>
-                <img src="IMG/Icons/Email.png" alt="IconEmail"><p>educacaofinanceiratcc23@gmail.com</p><br>
-                <img src="IMG/Icons/instagram.png" alt="IconInsta"><p>@aces.soriafinanceira</p><br>
+                <img src="IMG/Icons/Predio.png" alt="IconPredio">
+                <p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
+                <img src="IMG/Icons/Telefone.png" alt="IconTel">
+                <p>(11)4823-7765</p><br>
+                <img src="IMG/Icons/whatsapp.png" alt="IconWhats">
+                <p>(11) 98756-4456</p><br>
+                <img src="IMG/Icons/Email.png" alt="IconEmail">
+                <p>educacaofinanceiratcc23@gmail.com</p><br>
+                <img src="IMG/Icons/instagram.png" alt="IconInsta">
+                <p>@aces.soriafinanceira</p><br>
             </div>
         </div>
-        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
+        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a
+                href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
     </footer>
     <script src="JS/script.js"></script>
 </body>
