--- a/Servicos.html
+++ b/Servicos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="IMG/Logos/Icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/Responsividade.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
@@ -21,7 +21,7 @@
             <li><a href="index.html">Principal</a></li>
             <li><a href="Blog.html">Blog</a></li>
             <li><a href="QuemSomos.html">Quem Somos</a></li>
-            <li><a href="Servicos.html">Serviços</a></li>
+            <li><a href="Servicos.html" id="Ativado">Serviços</a></li>
         </ul>
     </nav>
     <main>
