--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="IMG/Logos/Icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/Resposividade/Responsividade.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
@@ -18,7 +18,7 @@
             <img src="IMG/Icons/MenuBranco.png" alt="IconeDoMenu" id="MenuHam">
         </div>
         <ul>
-            <li><a href="index.html">Principal</a></li>
+            <li><a href="index.html" id="Ativado">Principal</a></li>
             <li><a href="Blog.html">Blog</a></li>
             <li><a href="QuemSomos.html">Quem Somos</a></li>
             <li><a href="Servicos.html">Serviços</a></li>
@@ -29,26 +29,32 @@
             <h1>Bem vindo ao <strong>MONETIZE-SE</strong><br>Seu guia na educação finaceira para adolescentes</h1>
         </header>
         <section id="QuemSomosP">
-            <h1>O que o é a MONETIZE-SE</h1>
+            <h1>O que é a <strong>MONETIZE-SE</strong></h1>
             <p>Breve descrição</p>
-            <ul>
-                <li><strong>Oferecemos</strong> ao público jovem o aprendizado abrangente sobre educação financeira</li>
-                <li><strong>Queremos</strong> apresentar o reconhecimento dos impactos futuros desse conhecimento na qualidade de vida</li>
-                <li></li>
-                <li></li>
-            </ul>
+            <div>
+                <ul>
+                    <li><strong>Oferecemos</strong><p>ao público jovem o aprendizado abrangente sobre educação financeira</p></li>
+                    <li><strong>Queremos</strong><p>apresentar o reconhecimento dos impactos futuros desse conhecimento na qualidade de vida</p></li>
+                </ul>
+                <figure>E</figure>
+            </div>
+        </section>
+        <section id="PropostaP">
             <h2>Nossa proposta</h2>
-            <p> A proposta da Monetiza-se é trazer conhecimentos de finanças para um público jovem de maneira lúdica. Que visa mostrar a importância do uso correto do dinheiro e a melhor maneira de administrar ele, para uma melhor qualidade de vida.</p>
+            <p>A proposta da Monetiza-se é trazer conhecimentos de finanças para um público jovem de maneira lúdica. Que visa mostrar a importância do uso correto do dinheiro e a melhor maneira de administrar ele, para uma melhor qualidade de vida.</p>
         </section>
         <section id="ServicosP">
             <h1>Nosso Serviços</h1>
-            <p></p>
-            <ul>
-                <li>nosso <a href="">blog</a> com matérias informativas</li>
-                <li>materiais didáticos</li>
-                <li>aulas</li>
-                <li>e palestras para redes de ensino</li>
-            </ul>
+            <p>Breve descrição</p>
+            <div>
+                <figure>E</figure>
+                <ul>
+                    <li><p>nosso</p><a href="blog.html">blog</a><p>com matérias informativas</p></li>
+                    <li><p>materiais didáticos</p></li>
+                    <li><p>aulas</p></li>
+                    <li><p>e palestras para redes de ensino</p></li>
+                </ul>
+            </div>
         </section>
         <section id="Newsletter">
             <div>
