--- a/Blog.html
+++ b/Blog.html
@@ -87,7 +87,7 @@
                         <h4>Bolsa de Valores</h4>
                         <p>A bolsa de valores é um ambiente digital onde ocorrem a negociação de ações, títulos e outros ativos. </p>
                     </a>
-                    <aside id="asideMobile">
+                    <aside class="asideMobile">
                         <p>e</p>
                     </aside>
                     <a href="Materias/materia7.html">
@@ -117,7 +117,9 @@
                         <h4>Endividamento</h4>
                         <p>O endividamento acontece quando você não consegue arcar com os gastos e acaba adiando o pagamento. </p>
                     </a>
-                    
+                    <aside class="asideMobile">
+                        <p>e</p>
+                    </aside>
                     <a href="Materias/materia1.html">
                         <div class="imgMateria" id="M1"></div>
                         <p class="temaM">Tema</p>
@@ -140,6 +142,9 @@
                         <p>p</p>
                     </a>
                     <aside>
+                        <p>e</p>
+                    </aside>
+                    <aside class="asideMobile">
                         <p>e</p>
                     </aside>
                 </article>
