--- a/Materias/materia4.html
+++ b/Materias/materia4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/materias.css">
     <link rel="stylesheet" href="../CSS/Resposividade/MateriaR.css">
     <script
@@ -47,8 +47,12 @@
                     fatores para lucro com a poupança são a quantidade de dinheiro na conta e o tempo que ele ficará
                     parado na conta , quanto maior esses dois fatores maior o lucro.</p>
                 <h4>Exemplo</h4>
-                <p>Você deposita R$1.000 no 1º dia, do próximo, você terá aproximadamente R$1.001,31. Já se você aplicar R$3.000 no dia 1º dia, do próximo mês, você terá aproximadamente R$3.003,92.<p>
-                <p>Apesar de ser um investimento de baixo risco e considerado seguro levando em conta fatores externos da economia como as taxas de juros, a poupança não acaba sendo um investimento com um retorno alto e acaba não sendo tão significativo como outros.</p>
+                <p>Você deposita R$1.000 no 1º dia, do próximo, você terá aproximadamente R$1.001,31. Já se você aplicar
+                    R$3.000 no dia 1º dia, do próximo mês, você terá aproximadamente R$3.003,92.
+                <p>
+                <p>Apesar de ser um investimento de baixo risco e considerado seguro levando em conta fatores externos
+                    da economia como as taxas de juros, a poupança não acaba sendo um investimento com um retorno alto e
+                    acaba não sendo tão significativo como outros.</p>
             </article>
             <aside></aside>
         </section>
