--- a/Materias/materia9.html
+++ b/Materias/materia9.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/materias.css">
     <link rel="stylesheet" href="../CSS/Resposividade/MateriaR.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
+        async defer></script>
     <title>Educação Financeira - Endividamento</title>
 </head>
 
@@ -34,9 +36,20 @@
         </header>
         <section id="TextoMateria">
             <article>
-                <p>A cada 10 famílias brasileiras, 8 têm dívidas. Essa tem sido a taxa média de endividamento das famílias, medida pela Pesquisa de Endividamento e Inadimplência do Consumidor (Peic), divulgada pela Confederação Nacional do Comércio de Bens, Serviços e Turismo (CNC). Isso ocorre pelo uso incorreto do cartão de crédito que é o reflexo da falta de educação financeira dos brasileiros e como a falta de um planejamento afeta a vida das pessoas.</p>
-                <p>Por isso é necessário ter um controle de gastos , ter um conhecimento das próprias despesas e saber  dividir os gastos por categorias, vai ter vários pontos para  acompanhar as informações registradas no fim do mês, e ver em que fatores da sua rotina pode   economizar.  Ter uma planilha de gastos semanal, mensal e anual e sempre saber para onde o seu dinheiro está indo suas entradas e saídas.</p> 
-                <p>O endividamento das famílias é uma realidade e um ciclo que passa de geração em geração mas com o conhecimento da educação financeira na vida dos jovens podemos quebrar esse ciclo e ter futuras gerações independente financeiramente  e que façam escolhas que vão ser financeiramente sustentável e que tanto no presente tanto quando envelhecerem vão ter uma boa qualidade de vida.</p>
+                <p>A cada 10 famílias brasileiras, 8 têm dívidas. Essa tem sido a taxa média de endividamento das
+                    famílias, medida pela Pesquisa de Endividamento e Inadimplência do Consumidor (Peic), divulgada pela
+                    Confederação Nacional do Comércio de Bens, Serviços e Turismo (CNC). Isso ocorre pelo uso incorreto
+                    do cartão de crédito que é o reflexo da falta de educação financeira dos brasileiros e como a falta
+                    de um planejamento afeta a vida das pessoas.</p>
+                <p>Por isso é necessário ter um controle de gastos , ter um conhecimento das próprias despesas e saber
+                    dividir os gastos por categorias, vai ter vários pontos para acompanhar as informações registradas
+                    no fim do mês, e ver em que fatores da sua rotina pode economizar. Ter uma planilha de gastos
+                    semanal, mensal e anual e sempre saber para onde o seu dinheiro está indo suas entradas e saídas.
+                </p>
+                <p>O endividamento das famílias é uma realidade e um ciclo que passa de geração em geração mas com o
+                    conhecimento da educação financeira na vida dos jovens podemos quebrar esse ciclo e ter futuras
+                    gerações independente financeiramente e que façam escolhas que vão ser financeiramente sustentável e
+                    que tanto no presente tanto quando envelhecerem vão ter uma boa qualidade de vida.</p>
             </article>
             <aside></aside>
         </section>
@@ -88,14 +101,20 @@
             <div id="map"></div>
             <div id="Contatos">
                 <h3>Contato</h3>
-                <img src="../IMG/Icons/Predio.png" alt="IconPredio"><p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
-                <img src="../IMG/Icons/Telefone.png" alt="IconTel"><p>(11)4823-7765</p><br>
-                <img src="../IMG/Icons/whatsapp.png" alt="IconWhats"><p>(11) 98756-4456</p><br>
-                <img src="../IMG/Icons/Email.png" alt="IconEmail"><p>educacaofinanceiratcc23@gmail.com</p><br>
-                <img src="../IMG/Icons/instagram.png" alt="IconInsta"><p>@aces.soriafinanceira</p><br>
+                <img src="../IMG/Icons/Predio.png" alt="IconPredio">
+                <p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
+                <img src="../IMG/Icons/Telefone.png" alt="IconTel">
+                <p>(11)4823-7765</p><br>
+                <img src="../IMG/Icons/whatsapp.png" alt="IconWhats">
+                <p>(11) 98756-4456</p><br>
+                <img src="../IMG/Icons/Email.png" alt="IconEmail">
+                <p>educacaofinanceiratcc23@gmail.com</p><br>
+                <img src="../IMG/Icons/instagram.png" alt="IconInsta">
+                <p>@aces.soriafinanceira</p><br>
             </div>
         </div>
-        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
+        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a
+                href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
     </footer>
     <script src="../JS/script.js"></script>
 </body>
