--- a/QuemSomos.html
+++ b/QuemSomos.html
@@ -29,14 +29,15 @@
     <main>
         <section id="QuemSomos">
             <h1>Quem Somos</h1>
-            <p>Nossa empresa é nova e apresenta um grande diferencial no mercado, um serviço personalizado para o nosso público e a valorização de cada um individualmente, criando uma experiência única e lúdica para o público. Visamos transformar a sua vida pessoal, profissional e finanças satisfatória. A empresa aposta em inovação para atingir o objetivo de propagar o conhecimento sobre educação financeira e mudar a realidade das pessoas com a aplicação do tema no seu cotidiano.</p>
+            <p>Nossa empresa é nova e apresenta um grande diferencial no mercado, um serviço personalizado para o nosso público e a valorização de cada um individualmente, criando uma experiência única e lúdica para o público.</p>
+            <p>Visamos transformar a sua vida pessoal, profissional e finanças satisfatória. A empresa aposta em inovação para atingir o objetivo de propagar o conhecimento sobre educação financeira e mudar a realidade das pessoas com a aplicação do tema no seu cotidiano.</p>
         </section>
         <section id="MVV">
             <h1>Missão, Visão e Valores</h1>
             <article>
                 <img src="IMG/missao.png" alt="missao">
                 <h2>Missão</h2>
-                <p> Capacitar adolescente do ensino médio com habilidades e conhecimentos necessários para gerenciar suas finanças pessoais ao tomar decisões financeiras, gerando uma formação responsável e eficaz.</p>
+                <p>Capacitar adolescente do ensino médio com habilidades e conhecimentos necessários para gerenciar suas finanças pessoais ao tomar decisões financeiras, gerando uma formação responsável e eficaz.</p>
             </article>
             <article>
                 <img src="IMG/visao.png" alt="visao">
