--- a/Materias/materia6.html
+++ b/Materias/materia6.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/materias.css">
     <link rel="stylesheet" href="../CSS/Resposividade/MateriaR.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
+        async defer></script>
     <title>Educação Financeira - Bolsa de Valores</title>
 </head>
 
@@ -34,15 +36,32 @@
         </header>
         <section id="TextoMateria">
             <article>
-                <p>A bolsa de valores é um mercado financeiro organizado e regulamentado onde os investidores compram e vendem títulos financeiros, como ações, títulos, commodities e outros instrumentos financeiros. Investir na bolsa de valores é basicamente investir em açoẽs de empresas, as ações correspondem a uma parcela do capital de uma empresa. Ao comprar um papel, o investidor se torna sócio do negócio, o que significa que ele poderá participar da divisão dos lucros, de acordo com a cota que possui, assim como ter que lidar com possíveis prejuízos que a companhia possa ter.</p>
+                <p>A bolsa de valores é um mercado financeiro organizado e regulamentado onde os investidores compram e
+                    vendem títulos financeiros, como ações, títulos, commodities e outros instrumentos financeiros.
+                    Investir na bolsa de valores é basicamente investir em açoẽs de empresas, as ações correspondem a
+                    uma parcela do capital de uma empresa. Ao comprar um papel, o investidor se torna sócio do negócio,
+                    o que significa que ele poderá participar da divisão dos lucros, de acordo com a cota que possui,
+                    assim como ter que lidar com possíveis prejuízos que a companhia possa ter.</p>
                 <h4>bolsa de valores brasileira </h4>
-                <p>No Brasil, a Bolsa de Valores é chamada B3 e é supervisionada pela Comissão de Valores Mobiliários (CVM). que é uma das principais empresas de infraestrutura de mercado financeiro no mundo, atuando em ambientes de bolsa e de balcão. Acreditamos que um ambiente de negócios confiável e dinâmico, por isso, oferecemos ferramentas que acompanham um mercado em constante desenvolvimento como o brasileiro. Que tem algumas principais frentes de atuação essas são:</p>
-                <p>Mercado de bolsa: onde negociam ativos como ações, fundos imobiliários e outros. As operações acontecem de forma organizada e padronizada em um pregão eletrônico.</p>
-                <p>Mercado de renda fixa e crédito: onde negociam ativos como ações, fundos imobiliários e outros. As operações acontecem de forma organizada e padronizada em um pregão eletrônico.</p>
-                <p>Infraestrutura para financiamento: oferecemos o sistema eletrônico para registro de gravames de financiamentos de veículos e o sistema de registro de contratos e garantia para o mercado imobiliário, entre outros serviços.</p>
-                <p>Tecnologia, dados e serviços: inclui serviços para os participantes de mercado que usam como base dados que transitam por nossos ambientes. Isso inclui soluções dados e apoio para a realização de leilões e licitações e muito mais.</p>
-                <p>ASG - Ambiental, Social e Governança: temos o papel de induzir as melhores práticas de sustentabilidade e oferecer produtos e serviços ASG para o mercado</p>
-                <p>Para investir na bolsa de valores é necessário ter uma conta em uma corretora de valores ou instituição financeira autorizada pela CVM. Elas funcionam como intermediárias do investimento.</p>
+                <p>No Brasil, a Bolsa de Valores é chamada B3 e é supervisionada pela Comissão de Valores Mobiliários
+                    (CVM). que é uma das principais empresas de infraestrutura de mercado financeiro no mundo, atuando
+                    em ambientes de bolsa e de balcão. Acreditamos que um ambiente de negócios confiável e dinâmico, por
+                    isso, oferecemos ferramentas que acompanham um mercado em constante desenvolvimento como o
+                    brasileiro. Que tem algumas principais frentes de atuação essas são:</p>
+                <p>Mercado de bolsa: onde negociam ativos como ações, fundos imobiliários e outros. As operações
+                    acontecem de forma organizada e padronizada em um pregão eletrônico.</p>
+                <p>Mercado de renda fixa e crédito: onde negociam ativos como ações, fundos imobiliários e outros. As
+                    operações acontecem de forma organizada e padronizada em um pregão eletrônico.</p>
+                <p>Infraestrutura para financiamento: oferecemos o sistema eletrônico para registro de gravames de
+                    financiamentos de veículos e o sistema de registro de contratos e garantia para o mercado
+                    imobiliário, entre outros serviços.</p>
+                <p>Tecnologia, dados e serviços: inclui serviços para os participantes de mercado que usam como base
+                    dados que transitam por nossos ambientes. Isso inclui soluções dados e apoio para a realização de
+                    leilões e licitações e muito mais.</p>
+                <p>ASG - Ambiental, Social e Governança: temos o papel de induzir as melhores práticas de
+                    sustentabilidade e oferecer produtos e serviços ASG para o mercado</p>
+                <p>Para investir na bolsa de valores é necessário ter uma conta em uma corretora de valores ou
+                    instituição financeira autorizada pela CVM. Elas funcionam como intermediárias do investimento.</p>
             </article>
             <aside></aside>
         </section>
@@ -94,14 +113,20 @@
             <div id="map"></div>
             <div id="Contatos">
                 <h3>Contato</h3>
-                <img src="../IMG/Icons/Predio.png" alt="IconPredio"><p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
-                <img src="../IMG/Icons/Telefone.png" alt="IconTel"><p>(11)4823-7765</p><br>
-                <img src="../IMG/Icons/whatsapp.png" alt="IconWhats"><p>(11) 98756-4456</p><br>
-                <img src="../IMG/Icons/Email.png" alt="IconEmail"><p>educacaofinanceiratcc23@gmail.com</p><br>
-                <img src="../IMG/Icons/instagram.png" alt="IconInsta"><p>@aces.soriafinanceira</p><br>
+                <img src="../IMG/Icons/Predio.png" alt="IconPredio">
+                <p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
+                <img src="../IMG/Icons/Telefone.png" alt="IconTel">
+                <p>(11)4823-7765</p><br>
+                <img src="../IMG/Icons/whatsapp.png" alt="IconWhats">
+                <p>(11) 98756-4456</p><br>
+                <img src="../IMG/Icons/Email.png" alt="IconEmail">
+                <p>educacaofinanceiratcc23@gmail.com</p><br>
+                <img src="../IMG/Icons/instagram.png" alt="IconInsta">
+                <p>@aces.soriafinanceira</p><br>
             </div>
         </div>
-        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
+        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a
+                href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
     </footer>
     <script src="../JS/script.js"></script>
 </body>
