--- a/Materias/materia7.html
+++ b/Materias/materia7.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/materias.css">
     <link rel="stylesheet" href="../CSS/Resposividade/MateriaR.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
+        async defer></script>
     <title>Educação Financeira - Juros e inflação</title>
 </head>
 
@@ -34,11 +36,28 @@
         </header>
         <section id="TextoMateria">
             <article>
-                <p>De uma maneira simples, podemos dizer que juro é o valor pago para usar um dinheiro que não é seu. Funciona mais ou menos como um “aluguel”.</p>
-                <p>Por exemplo: se você pega um valor emprestado de alguém ou de um banco, você deve devolver o mesmo valor e, também, uma quantia extra, como pagamento pelo uso desse dinheiro que foi emprestado por algum tempo. Este valor extra que você deve pagar são os juros. Da mesma maneira, se você deixar um dinheiro no banco, aplicado por um tempo, você deve receber juros pelo uso que o banco faz do seu dinheiro, funciona como o oposto de uma poupança como foi explicado.</p>
-                <p>Cada banco define as taxas de juros que vai praticar em cada operação, por exemplo, nos empréstimos, financiamentos ou investimentos. Essas taxas, porém, têm como base a taxa básica de juros do país, definida pelo COPOM - Comitê de Política Monetária, um órgão do Banco Central. Trata-se da chamada taxa SELIC (Sistema Especial de Liquidação e Custódia), que é uma referência para o cálculo das demais taxas de juros de todo o crédito concedido na economia do país.</p>
-                <p>A inflação afeta diretamente a população porque afeta o poder de compra da população, a inflação vai ser o que vai justificar o preço de itens básicos como : alimentação, habitação, vestuário, transporte, saúde, despesas pessoais, educação. De forma simples é como se o seu dinheiro perdesse valor. Para entender a inflação, pense na seguinte situação: se a oferta de um produto é limitada, mas muitas pessoas querem comprá-lo, o preço desse produto provavelmente aumentará. Isso acontece porque a demanda (pessoas querendo comprar) é maior do que a oferta (quantidade disponível).</p>
-                <p>Além disso, a inflação pode ser causada por outros fatores, como aumento dos custos de produção, aumento dos salários dos trabalhadores, aumento dos impostos, entre outros. Quando os custos aumentam, as empresas geralmente repassam esses aumentos para os preços dos produtos e serviços que vendem.</p>
+                <p>De uma maneira simples, podemos dizer que juro é o valor pago para usar um dinheiro que não é seu.
+                    Funciona mais ou menos como um “aluguel”.</p>
+                <p>Por exemplo: se você pega um valor emprestado de alguém ou de um banco, você deve devolver o mesmo
+                    valor e, também, uma quantia extra, como pagamento pelo uso desse dinheiro que foi emprestado por
+                    algum tempo. Este valor extra que você deve pagar são os juros. Da mesma maneira, se você deixar um
+                    dinheiro no banco, aplicado por um tempo, você deve receber juros pelo uso que o banco faz do seu
+                    dinheiro, funciona como o oposto de uma poupança como foi explicado.</p>
+                <p>Cada banco define as taxas de juros que vai praticar em cada operação, por exemplo, nos empréstimos,
+                    financiamentos ou investimentos. Essas taxas, porém, têm como base a taxa básica de juros do país,
+                    definida pelo COPOM - Comitê de Política Monetária, um órgão do Banco Central. Trata-se da chamada
+                    taxa SELIC (Sistema Especial de Liquidação e Custódia), que é uma referência para o cálculo das
+                    demais taxas de juros de todo o crédito concedido na economia do país.</p>
+                <p>A inflação afeta diretamente a população porque afeta o poder de compra da população, a inflação vai
+                    ser o que vai justificar o preço de itens básicos como : alimentação, habitação, vestuário,
+                    transporte, saúde, despesas pessoais, educação. De forma simples é como se o seu dinheiro perdesse
+                    valor. Para entender a inflação, pense na seguinte situação: se a oferta de um produto é limitada,
+                    mas muitas pessoas querem comprá-lo, o preço desse produto provavelmente aumentará. Isso acontece
+                    porque a demanda (pessoas querendo comprar) é maior do que a oferta (quantidade disponível).</p>
+                <p>Além disso, a inflação pode ser causada por outros fatores, como aumento dos custos de produção,
+                    aumento dos salários dos trabalhadores, aumento dos impostos, entre outros. Quando os custos
+                    aumentam, as empresas geralmente repassam esses aumentos para os preços dos produtos e serviços que
+                    vendem.</p>
             </article>
             <aside></aside>
         </section>
@@ -90,14 +109,20 @@
             <div id="map"></div>
             <div id="Contatos">
                 <h3>Contato</h3>
-                <img src="../IMG/Icons/Predio.png" alt="IconPredio"><p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
-                <img src="../IMG/Icons/Telefone.png" alt="IconTel"><p>(11)4823-7765</p><br>
-                <img src="../IMG/Icons/whatsapp.png" alt="IconWhats"><p>(11) 98756-4456</p><br>
-                <img src="../IMG/Icons/Email.png" alt="IconEmail"><p>educacaofinanceiratcc23@gmail.com</p><br>
-                <img src="../IMG/Icons/instagram.png" alt="IconInsta"><p>@aces.soriafinanceira</p><br>
+                <img src="../IMG/Icons/Predio.png" alt="IconPredio">
+                <p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
+                <img src="../IMG/Icons/Telefone.png" alt="IconTel">
+                <p>(11)4823-7765</p><br>
+                <img src="../IMG/Icons/whatsapp.png" alt="IconWhats">
+                <p>(11) 98756-4456</p><br>
+                <img src="../IMG/Icons/Email.png" alt="IconEmail">
+                <p>educacaofinanceiratcc23@gmail.com</p><br>
+                <img src="../IMG/Icons/instagram.png" alt="IconInsta">
+                <p>@aces.soriafinanceira</p><br>
             </div>
         </div>
-        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
+        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a
+                href="https://github.com/Leticia-Emily-Moraes">Leticia Moraes</a></p>
     </footer>
     <script src="../JS/script.js"></script>
 </body>
